--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -14,12 +14,28 @@
     position: absolute;
     inset: 0;
     width: 100%;
+
     background-color: var(--primary-color);
+    z-index: -1;
+
 }
 
 .header__logo h4 {
     padding-left: 30px;
+
     color: #fff;
-    z-index: 1;
+
 }
+
+.header__menu, .header__menu-mobile {
+    padding: 20px;
+    flex: 1.236;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 64px;
+  
+    list-style: none;
+  }
+  
 
