--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -10,7 +10,7 @@
 
 }
 
-.trending-sushi, .trending-drink {
+.trending-sushi, .trending-drinks {
     width: 100%;
     min-height: 640px;
 
@@ -91,6 +91,32 @@
     width: 254px;
     height: 260px;
     object-fit: contain;
+}
+
+.trending__discover {
+    position: absolute;
+    top: 44%;
+    left: 44%;
+    z-index: 1;
+
+    width: 160px;
+    height: 160px;
+
+    background-color: var(--secondary-color);
+    border-radius: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.trending__discover p {
+    color: #fff;
+    text-transform: uppercase;
+
+    font-size: 18px;
+    font-weight: 500;
+    font-family: var(--plus-jakarta-sans);
 }
 
 /* Arrows */
